<resources>
    <string name="app_name" translatable="false">cSploit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">cSploit</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report is going to be sent to my
        developer to help fix the issue :)
    </string>
    <string name="toggle_button">ToggleButton</string>
    <string name="enter_redirection_details">Enter redirection details below:</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="ports">Ports</string>
    <string name="target">Target</string>
    <string name="unknown">No information</string>
    <string name="services">Services</string>
    <string name="os">OS</string>
    <string name="device_type">Device Type</string>
    <string name="start_hijack">Tap on a session to start hijacking, long tap to save it to file.
    </string>
    <string name="sort">Sort:</string>
    <string name="select_module">Select a module to run</string>
    <string name="choose">Choose</string>
    <string name="response">Response</string>
    <string name="request">Request</string>
    <string name="wait_for_response">Wait for a response</string>
    <string name="protocol">Protocol</string>
    <string name="csploit_catchphrase">cSploit - An Android network penetration suite.</string>
    <string name="csploit_copyleft">Copyleft of Simone Margaritelli aka evilsocket.</string>
    <string name="csploit_url" translatable="false">http://www.csploit.org/</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="csploit_disclaimer">
        <![CDATA[This application is not to be used for any purposes other than to demonstrate its functions, and must only be used on networks for which you have permission to do so. Any other use is not the responsibility of the developer.In other words, don&apos;t be stupid, and don&apos;t direct angry people towards me.]]></string>
    <string name="license">License</string>
    <string name="gpl_license">This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by the Free Software
        Foundation, either version 3 of the License, or (at your option) any later version.
        This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
        without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the GNU General Public License for more details.
        You should have received a copy of the GNU General Public License along with this program.
        If not, see http://www.gnu.org/licenses/.\n\nAdditionally, some icons have been distributed under the CC-BY 4.0 license and are copyrighted by Google, Inc.
        The full icon set is available at https://www.google.com/design/icons .
    </string>
    <string name="service">Service</string>
    <string name="stopped">Stopped&#8230;</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stopped_dots">Stopped &#8230;</string>
    <string name="starting_dots">Starting &#8230;</string>
    <string name="max_length">Max Length</string>
    <string name="min_length">Min Length</string>
    <string name="username">Username</string>
    <string name="Charset">Charset</string>
    <string name="filter_desc">Enter a custom replace filter, including simple string replacement or
        regular expressions.
    </string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="wake_on_lan">Wake On Lan</string>
    <string name="send">Send</string>
    <string name="update_available">Update Available</string>
    <string name="new_update_desc">A new update to version</string>
    <string name="new_update_desc2">is available, do you want to download it?</string>
    <string name="checking">Checking&#8230;</string>
    <string name="no_updates_available">No updates available.</string>
    <string name="new_msf_update_desc">A MetasploitFramework update</string>
    <string name="new_version">New version</string>
    <string name="new_version2">found!</string>
    <string name="downloading_update">Downloading update&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_occured">An error occurred while downloading the update.</string>
    <string name="invalid_target">Invalid target.</string>
    <string name="add_custom_target">Add custom target</string>
    <string name="enter_url">Enter an URL, host name or IP address below:</string>
    <string name="net_discovery_stopped">Network discovery stopped.</string>
    <string name="net_discovery_started">Network discovery started.</string>
    <string name="start_monitor">Start network monitor</string>
    <string name="stop_monitor">Stop network monitor</string>
    <string name="start_msfrpcd">Start Metasploit RPCD</string>
    <string name="stop_msfrpcd">Stop Metasploit RPCD</string>
    <string name="exit">Exit</string>
    <string name="close_confirm">This will close cSploit, are you sure you want to continue?
    </string>
    <string name="press_back">Press back again to close this app.</string>
    <string name="selected_">Selected: &#160;</string>
    <string name="github_new_issue_url" translatable="false">https://github.com/cSploit/android/issues/new</string>
    <string name="no_session_found">No session file found on sd card.</string>
    <string name="select_session_file">Select a session file from the sd card :</string>
    <string name="select_session">Select session</string>
    <string name="invalid_session">Invalid session name.</string>
    <string name="session_saved_to">Session saved to &#160;</string>
    <string name="save_session">Save session</string>
    <string name="enter_session_name">Enter the name of the session file :</string>
    <string name="new_session_started">New session started</string>
    <string name="warning">Warning</string>
    <string name="warning_new_session">Starting a new session would delete the current one,
        continue?
    </string>
    <string name="fatal_error_html">
        <![CDATA[<p>It seems like your ROM has the <b>LD_LIBRARY_PATH bug</b>, i\'m sorry but it\'s not compatible with cSploit.</p>]]></string>
    <string name="fatal_error_html2">
        <![CDATA[<p>For more info read the <a href=\"http://csploit.net/#faq\">FAQ</a>.</p>]]></string>
    <string name="install_error">Error during files installation!</string>
    <string name="arm_error">
        <![CDATA[<p>It seems like your device processor is not an ARM, i\'m sorry but it\'s not compatible with cSploit.</p>]]></string>
    <string name="arm_error2">
        <![CDATA[<p>For more info read the <a href=\"http://csploit.net/#requirements\">requirements</a> section.</p>]]></string>
    <string name="busybox_required">Full BusyBox installation required, killall binary not
        found(maybe you have an old busybox version).
    </string>
    <string name="only_4_root">This application can run only on rooted devices.</string>
    <string name="initializing">Initializing&#8230;</string>
    <string name="initialization_error">Initialization Error</string>
    <string name="target_alias">Target Alias</string>
    <string name="set_alias">Set an alias for this target:</string>
    <string name="no_connectivity">No connectivity available.</string>
    <string name="wifi_key_copied">WiFi key copied to clipboard.</string>
    <string name="connected_to"><![CDATA[Connected to <b>]]></string>
    <string name="connected_to2"><![CDATA[</b> with key <b><font color=\"green\">]]></string>
    <string name="connected_to3"><![CDATA[</font></b>!]]></string>
    <string name="connection_to"><![CDATA[Connection to <b>]]></string>
    <string name="connection_to2">
        <![CDATA[</b> <b><font color=\"red\">FAILED</font></b>.]]></string>
    <string name="enter_key_or_crack">Enter WiFi Key or attempt cracking:</string>
    <string name="enter_wifi_key">Enter WiFi Key:</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="invalid_filename">Invalid file name.</string>
    <string name="something_went_wrong">Something went wrong, please select again a valid target.
    </string>
    <string name="selected">Selected </string>
    <string name="nothing_found"><![CDATA[<small><i>Nothing Found</i></small>]]></string>
    <string name="no_open_ports">No open ports detected on current target, run the service inspector first.</string>
    <string name="no_exploits_found">No exploits found.</string>
    <string name="no_open_ports_focused_scan">No open ports found, run the port scanner before selecting a focused scan.</string>
    <string name="no_open_ports_exploitfinder">No exploits found on this target, run the ExploitFinder first.</string>
    <string name="no_exploit_started">No exploit has been started.</string>
    <string name="no_vulnerabilities_found">No vulnerabilities found about this target. run the Vulnerability Finder first.</string>
    <string name="no_infos_on_target">No specific informations about services running on target
        machine, run the service inspector first.
    </string>
    <string name="custom_charset">Custom Charset</string>
    <string name="enter_chars_wanted">Enter the chars you want to use in the custom charset:
    </string>
    <string name="invalid_port">Invalid port specified.</string>
    <string name="request_empty">The request can not be empty.</string>
    <string name="request_sent">Request sent.</string>
    <string name="customize_wol_port">Customize WOL port and press Send.</string>
    <string name="couldnt_send_wol_packet">Could not send a WOL packet to a target without a known
        MAC address.
    </string>
    <string name="no_activities_for_url">No activities to handle this type of url.</string>
    <string name="select_ports">Select Ports</string>
    <string name="enter_ports_list">Enter a comma separated list of ports:</string>
    <string name="invalid_port_">Invalid port \'</string>
    <string name="port_must_be_greater">Port must be greater than 0 and smaller than 65535.</string>
    <string name="invalid_ports">Invalid ports specified.</string>
    <string name="empty_port_list">Empty port list.</string>
    <string name="about_csploit_v_">About cSploit v</string>
    <string name="select_target">Select a target below by clicking on a row, or long click on it to
        enter an alias or start a multiple attack.
    </string>
    <string name="generating_keys">Generating keys&#8230;</string>
    <string name="no_wifi_available">No WiFi connection available, the application will just check
        for updates. #STATUS#
    </string>
    <string name="missing_core_update">Core is not installed, the application will just check
        for updates. #STATUS#
    </string>
    <string name="heart_attack_update">Heart attack occurred, the application will just check
        for updates. #STATUS#
    </string>
    <string name="loading_changelog">Loading changelog&#8230;</string>
    <string name="menu_new_session">New session</string>
    <string name="menu_save_session">Save session</string>
    <string name="menu_restore_session">Restore session</string>
    <string name="menu_stop_monitor">Stop network monitor</string>
    <string name="menu_submit_issue">Submit issue</string>
    <string name="menu_about">About cSploit</string>
    <string name="menu_add">Add</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_wifi_scan">WiFi scan</string>
    <string name="menu_stop_msfrpcd">Stop MSFRPCD</string>
</resources>