<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ToggleButton
        android:id="@+id/sniffToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/toggle_button"
        android:textAllCaps="true"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/app_color"/>

    <ProgressBar
        android:id="@+id/sniffActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/sniffToggleButton"
        android:visibility="invisible" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sniffToggleButton"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/sniffActivity"
        android:layout_below="@+id/separator"
        android:animateLayoutChanges="true"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sniffToggleButton"
        android:layout_alignTop="@+id/sniffActivity"
        android:layout_toLeftOf="@+id/sniffActivity"
        android:layout_toRightOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sniffToggleButton"
        android:layout_alignTop="@+id/sortSpinner"
        android:layout_toRightOf="@+id/sniffToggleButton"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="8dp"
        android:text="@string/sort"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>